# voxel

./: Cargo.toml  README.md
src/: block.rs  chunk.rs  main.rs  player.rs  shader.wgsl  texture.rs  world.rs
