[package]
name = "minecraft"
version = "0.1.0"
edition = "2024"

[dependencies]
ab_glyph = "0.2.31"
anyhow = "1.0.99"
bytemuck = { version = "1.23.2", features = ["derive"] }
cgmath = "0.18.0"
crossbeam-channel = "0.5.15"
env_logger = "0.11.8"
image = "0.25.8"
noise = "0.9.0"
pollster = "0.4.0"
rand = "0.9.2"
rayon = "1.11.0"
rustc-hash = "2.1.1"
wgpu = "26.0.1"
wgpu_text = "26.0.0"
winit = "0.30.12"
